--- a/src/UI/Components/MobileUI/MobileUI.css
+++ b/src/UI/Components/MobileUI/MobileUI.css
@@ -1,5 +1,6 @@
 #MobileUI *{
 	z-index: 1000;
+	font-size: 12px;
 }
 
 #MobileUI .buttonBar, 
@@ -8,10 +9,11 @@
 }
 
 #MobileUI #toggleUIButton{
+	font-size: 3cqb;
 	top: 3px;
 	left: 3px;
-	width: 25px;
-	height: 25px;
+	width: 10cqb;
+	height: 10cqb;
 }
 
 #MobileUI .buttons{
@@ -32,11 +34,11 @@
 	margin: 15px 0px;
 }
 
-#MobileUI .disabled { visibility:hidden; }
+#MobileUI .disabled { visibility:visible; }
 
 #MobileUI #topBar{
 	left: 50%;
-	top: 3px;
+	top: 10px;
 	transform: translate(-50%, 0);
 }
 
@@ -65,11 +67,13 @@
 }
 
 #MobileUI .primary{
-	width: 45px;
-	height: 45px;
+	font-size: 3cqb;
+	width: 11cqb;
+	height: 11cqb;
 }
 
 #MobileUI .secondary{
-	width: 30px;
-	height: 30px;
+	font-size: 3cqb;
+	width: 10cqb;
+	height: 10cqb;
 }
