--- a/src/UI/Components/MobileUI/MobileUI.html
+++ b/src/UI/Components/MobileUI/MobileUI.html
@@ -1,8 +1,8 @@
 <div id="MobileUI">
-	<button id="toggleUIButton" class="buttons">UI</button>
+	<button id="toggleUIButton" class="buttons">⚃</button>
 	
 	<div id="topBar" class="buttonBar disabled">
-		<button id="fullscreenButton" class="buttons mobileKeys secondary horizontal">[ ]</button>
+		<button id="fullscreenButton" class="buttons mobileKeys secondary horizontal">⎚</button>
 	</div>
 	
 	
@@ -14,9 +14,9 @@
 	
 	
 	<div id="rightBar" class="buttonBar disabled">
-		<button id="toggleTargetingButton" class="buttons mobileKeys secondary vertical">TG</button><br/>
+		<button id="toggleTargetingButton" class="buttons mobileKeys secondary vertical">*️⃣</button><br/>
 		<button id="toggleAutoFollowButton" class="buttons mobileKeys vertical secondary disabled">AF</button><br/>
 		<button id="toggleAutoTargetButton" class="buttons mobileKeys vertical secondary disabled">AT</button><br/>
-		<button id="attackButton" class="buttons mobileKeys vertical primary disabled">ATK</button><br/>
+		<button id="attackButton" class="buttons mobileKeys vertical primary disabled">🗡️</button><br/>
 	</div>
 </div>
